Made test files blind to the version number

--- a/tests/6.interfaces.html
+++ b/tests/6.interfaces.html
@@ -4,7 +4,7 @@
     <title>QUnit Test Suite</title>
     <link rel="stylesheet" href="styles/qunit-1.14.0.css" media="screen">
     <script type="text/javascript" src="scripts/qunit-1.14.0.js"></script>
-    <script type="text/javascript" src="scripts/classing.1.0.0.min.js"></script>
+    <script type="text/javascript" src="scripts/classing.min.js"></script>
     <script type="text/javascript" src="scripts/UsingInterfaces.js"></script>
 </head>
 <body>
