Added tests for instaceOf in response to issue #1

--- a/tests/instanceOf.html
+++ b/tests/instanceOf.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles/qunit-1.14.0.css" media="screen">
     <script type="text/javascript" src="scripts/qunit-1.14.0.js"></script>
     <script type="text/javascript" src="scripts/classing.js"></script>
-    <script type="text/javascript" src="scripts/UsingInterfaces.js"></script>
+    <script type="text/javascript" src="scripts/instanceOf.js"></script>
 </head>
 <body>
     <h1 id="qunit-header">QUnit Test Suite</h1>
