--- a/tests/4.using objects.html
+++ b/tests/4.using objects.html
@@ -4,7 +4,7 @@
     <title>QUnit Test Suite</title>
     <link rel="stylesheet" href="styles/qunit-1.14.0.css" media="screen">
     <script type="text/javascript" src="scripts/qunit-1.14.0.js"></script>
-    <script type="text/javascript" src="scripts/classing.min.js"></script>
+    <script type="text/javascript" src="scripts/classing.js"></script>
     <script type="text/javascript" src="scripts/UsingObjects.js"></script>
 </head>
 <body>
